<resources>
  <string name="app_name_test">(Test) Scanner</string>
  <string name="app_name_acc">(Acc) Scanner</string>
  <string name="app_name">Scanner</string>
  <string name="onboarding_title">Onboarding</string>
  <string name="onboarding_screen_1_title">Jouw locatie veilig open</string>
  <string name="onboarding_screen_1_description">Met deze app controleer je het coronabewijs van je bezoekers. Zo kun je jouw locatie veilig open houden.</string>
  <string name="onboarding_screen_2_title">Scan QR-code voor toegang</string>
  <string name="onboarding_screen_2_description">Bezoekers maken eerst hun bewijs in de vorm van een QR-code. Met deze app check jij de QR-codes en zie je wie toegang mag krijgen.</string>
  <string name="onboarding_screen_3_title">Verplichte controle identiteitsbewijs</string>
  <string name="onboarding_screen_3_description">Vraag bezoekers altijd om een identiteitsbewijs te laten zien. Controleer of de gegevens op jouw scherm hetzelfde zijn als op het identiteitsbewijs. Check? Dan mag de bezoeker naar binnen.</string>
  <string name="onboarding_screen_4_title">Voor wie is de scanner?</string>
  <string name="onboarding_screen_4_description"><![CDATA[Met behulp van deze app kun je weer bezoekers ontvangen. Maar alleen als jouw locatie of activiteit onder de aangewezen locaties valt.]]></string>
  <string name="onboarding_next">Volgende</string>
  <string name="onboarding_finish">Aan de slag</string>
  <string name="onboarding_step">Stap %1$s</string>
  <string name="privacy_policy_title">Voorwaarden voor gebruik</string>
  <string name="privacy_policy_description"><![CDATA[In de <a href=\"https://coronacheck.nl/nl/gebruikersvoorwaarden-in-app\">gebruiksvoorwaarden</a> staat hoe CoronaCheck Scanner werkt en wat je rechten zijn.]]></string>
  <string name="privacy_policy_1"><![CDATA[Er worden <b>geen locatiegegevens</b> gebruikt of bewaard]]></string>
  <string name="privacy_policy_2"><![CDATA[Je mag gegevens van de bezoeker alleen gebruiken voor <b>controle van het bewijs</b>]]></string>
  <string name="privacy_policy_3"><![CDATA[Gegevens van de bezoeker worden <b>nergens centraal opgeslagen</b>]]></string>
  <string name="privacy_policy_checkbox_text">Ik heb de gebruikersvoorwaarden gelezen en ga hiermee akkoord</string>
  <string name="dialog_error_title">Technische fout</string>
  <string name="dialog_error_message">Excuus, er is een technische fout opgetreden</string>
  <string name="ok">Ok</string>
  <string name="scan_qr_title">Scan QR-codes</string>
  <string name="support">Meestgestelde vragen</string>
  <string name="about_this_app">Over deze app</string>
  <string name="give_us_feedback">Geef ons feedback</string>
  <string name="scan_qr_header">Scan de QR-codes van je bezoekers</string>
  <string name="scan_qr_description">Scan de QR-codes van je bezoekers. Is de QR-code geldig en zijn de gegevens hetzelfde als op het identiteitsbewijs? Dan mag je de bezoeker toegang geven.</string>
  <string name="scan_qr_button">Start scannen</string>
  <string name="scan_result_demo_title">Demo QR-code gescand</string>
  <string name="scan_result_valid_last_name">Achternaam</string>
  <string name="scan_result_valid_first_name">Voornaam</string>
  <string name="scan_result_valid_birth_day">Geboortedag</string>
  <string name="scan_result_valid_birth_month">Geboortemaand</string>
  <string name="scan_result_valid_personal_details_title">Controleer identiteitsbewijs</string>
  <string name="scan_result_european_nl_invalid_title">Dit is een internationale QR-code</string>
  <string name="scan_result_european_nl_invalid_subtitle">Dit is geen geldig bewijs in Nederland. Vraag de bezoeker een Nederlandse QR-code te laten zien.</string>
  <string name="scan_result_invalid_title">Geen geldige QR-code</string>
  <string name="scan_result_invalid_subtitle"><![CDATA[De bezoeker heeft geen geldig coronabewijs.<br/><a href=\"#\"><b>Lees mogelijke oorzaken</b></a>]]></string>
  <string name="scan_result_invalid_button">Scan volgende</string>
  <string name="scan_result_invalid_reason_title">Wat kan ik doen?</string>
  <string name="scan_result_invalid_reason_description"><![CDATA[Een rood scherm met kruis betekent dat de QR-code niet aan Nederlandse eisen voldoet.<br/><br/><b>Dit kun je doen:</b><br/><ol><li>Controleer of de tijd goed staat ingesteld op de telefoon van de bezoeker en die van jou. Zorg dat de datum en tijd op ‘automatisch instellen’ staan. </li><li>Controleer of de bezoeker een origineel bewijs laat zien. Een screenshot van een bewijs kan voor problemen zorgen.</li><li>Vraag de bezoeker om de app volledig af te sluiten en opnieuw op te starten. Scan daarna opnieuw de QR-code.</li></ol><br/><b>Blijft het scherm rood?</b><br/>Vraag de bezoeker contact op te nemen met de helpdesk van CoronaCheck.<br/><br/><b>Let op:</b> zonder groen scherm met vinkje mag de bezoeker niet toegelaten worden.]]></string>
  <string name="scan_result_unknown_qr_dialog_title">Deze QR-code bevat geen coronabewijs</string>
  <string name="scan_result_unknown_qr_dialog_message">Vraag de bezoeker een QR-code van een coronabewijs te laten zien.</string>
  <string name="scan_result_european_in_nl_dialog_title">Vraag naar de Nederlandse QR-code</string>
  <string name="scan_result_european_in_nl_dialog_message">Je hebt een internationale QR-code gescand. Gebruikers van CoronaCheck moeten in Nederland hun Nederlandse bewijs laten zien.</string>
  <string name="scan_result_valid_reason_title">Kloppen de gegevens niet?</string>
  <string name="scan_result_valid_reason_description"><![CDATA[Je mag de bezoeker geen toegang geven als de gegevens op jouw scherm anders zijn dan op het identiteitsbewijs.<br/><br/><b>Let op: soms vallen gegevens weg</b><br/>Om de privacy van de bezoeker te beschermen zie je soms niet alle gegevens op jouw scherm. Dan staat er een streepje (-) in het vak. Controleer in dat geval alleen de gegevens die je wel ziet.]]></string>
  <string name="about_this_app_description"><![CDATA[CoronaCheck Scanner is ontwikkeld zodat bepaalde plekken en activiteiten veilig hun deuren kunnen openen.<br/><br/>Bezoekers maken een coronabewijs met een QR-code van hun vaccinatie, negatieve testuitslag, of herstel van corona. Met behulp van deze app krijgen alleen bezoekers met zo’n coronabewijs toegang. Zo kunnen steeds meer plekken veilig bezocht worden.]]></string>
  <string name="scan_instructions">Over scannen</string>
  <string name="scan_instructions_1_title">Scan de QR-code</string>
  <string name="scan_instructions_1_description">Scan met de camera van je telefoon de QR-codes van bezoekers in de CoronaCheck-app of op papier. Toeristen kunnen een QR-code in een buitenlandse app of op papier tonen.</string>
  <string name="scan_instructions_2_title">Controleer het identiteitsbewijs</string>
  <string name="scan_instructions_2_description">Controleer bij bezoekers vanaf 14 jaar altijd of de gegevens op jouw scherm hetzelfde zijn als die op het identiteitsbewijs van de bezoeker. Zo weet je zeker dat de QR-code van die bezoeker is.</string>
  <string name="scan_instructions_3_image">Soms vallen gegevens weg</string>
  <string name="scan_instructions_3_title">Soms vallen gegevens weg</string>
  <string name="scan_instructions_3_description">Gegevens kunnen wegvallen om de privacy van de bezoeker te beschermen. Je ziet dan een streepje (-) staan. Controleer in dat geval alleen de gegevens die je wel ziet.</string>
  <string name="scan_instructions_4_image">Persoon houdt een telefoon vast met een rood scherm en een zwart kruis.</string>
  <string name="scan_instructions_4_title">Groen scherm = toegang</string>
  <string name="scan_instructions_4_description"><![CDATA[Kleurt je scherm groen met een vinkje? Dan is de QR-code geldig en kloppen de gegevens met het identiteitsbewijs. Je mag de bezoeker toegang geven.]]></string>
  <string name="privacy_statement">Gebruikersvoorwaarden</string>
  <string name="scanner_custom_title">Scan QR-code</string>
  <string name="camera_rationale_dialog_title">Scanner wil toegang tot je camera</string>
  <string name="camera_rationale_dialog_description">Zo kan de app QR-codes scannen</string>
  <string name="scanner_zebra_footer">Liever laserscannen?\nGebruik de gele toetsen op je toestel.</string>
  <string name="app_setup_text">We starten de app voor je op…</string>
  <string name="app_status_deactivated_title">App niet in gebruik</string>
  <string name="app_status_deactivated_message">Op dit moment is de app niet in gebruik. Ga voor meer informatie naar CoronaCheck.nl</string>
  <string name="app_status_deactivated_action">Naar CoronaCheck.nl</string>
  <string name="app_status_update_required_title">Tijd voor een update</string>
  <string name="app_status_update_required_message">Je hebt de laatste versie van de app nodig om verder te gaan.</string>
  <string name="app_status_update_required_action">Installeer update</string>
  <string name="app_status_internet_required_title">Je hebt geen internetverbinding</string>
  <string name="app_status_internet_required_message">Controleer je wifi of zet mobiele data aan.</string>
  <string name="app_status_internet_required_action">Probeer opnieuw</string>
  <string name="app_status_update_recommended_title">Wil je de app updaten?</string>
  <string name="app_status_update_recommended_message">Er is een nieuwe versie van de app beschikbaar.</string>
  <string name="app_status_update_recommended_dismiss_action">Nee, doe ik later</string>
  <string name="app_status_update_recommended_action">Installeer update</string>
  <string name="personal_details_month_january">JAN</string>
  <string name="personal_details_month_february">FEB</string>
  <string name="personal_details_month_march">MAA</string>
  <string name="personal_details_month_april">APR</string>
  <string name="personal_details_month_may">MEI</string>
  <string name="personal_details_month_june">JUN</string>
  <string name="personal_details_month_july">JUL</string>
  <string name="personal_details_month_august">AUG</string>
  <string name="personal_details_month_sep">SEP</string>
  <string name="personal_details_month_okt">OKT</string>
  <string name="personal_details_month_nov">NOV</string>
  <string name="personal_details_month_dec">DEC</string>
  <string name="app_version">App versie: %1$s (%2$s)</string>
  <string name="config_version">Configuratie %1$s, %2$s</string>
  <string name="back">Terug</string>
  <string name="onboarding_page_indicator_label">Pagina %1$s van %2$s</string>
  <string name="menu_close">Sluiten</string>
  <string name="new_terms_title">Onze voorwaarden zijn vernieuwd</string>
  <string name="new_terms_highlights"><![CDATA[<b>Dit is veranderd</b><br/><br/><ul><li>Beschrijving van gebruiksregels</li><li>Uitleg over gebruik van de app</li><li>Toestemming voor gebruik camera</li></ul>]]></string>
  <string name="new_terms"><![CDATA[Lees <a href=\"https://coronacheck.nl/nl/gebruikersvoorwaarden-in-app\">hier</a> de volledige gebruikersvoorwaarden.]]></string>
  <string name="new_terms_consent_button">Volgende</string>
  <string name="new_terms_consent_needed_positive_button">Akkoord</string>
  <string name="new_terms_consent_needed_negative_button">Niet akkoord</string>
  <string name="new_terms_no_consent_dialog_title">Je kan niet verder als je niet akkoord gaat</string>
  <string name="scan_instructions_menu_title">Zo werkt scannen</string>
  <string name="scan_result_something_wrong">Er klopt iets niet</string>
  <string name="scan_result_something_wrong_finished_check_button">Scan volgende</string>
  <string name="scan_result_valid_id_confirmed_button">Gegevens kloppen</string>
  <string name="scan_result_mandatory_id_check">Let op: identiteitscontrole is verplicht</string>
  <string name="verifier_about_this_app_scan_log">Scan-instelling log</string>
  <string name="verifier_menu_risksetting">Scan-instelling</string>
</resources>