<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan_qr"
            android:checkable="false"
            android:title="@string/scan_qr_title" />

        <item
            android:id="@+id/nav_scan_instructions"
            android:checkable="false"
            android:title="@string/scan_instructions_menu_title" />
    </group>
    <group
        android:id="@+id/info"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_support"
            android:checkable="false"
            android:title="@string/support" />

        <item
            android:id="@+id/nav_about_this_app"
            android:checkable="false"
            android:title="@string/about_this_app" />

        <!-- TODO: Implement give us feedback -->
        <item
            android:id="@+id/nav_give_us_feedback"
            android:checkable="false"
            android:title="@string/give_us_feedback"
            android:visible="false" />

        <item
            android:id="@+id/nav_close_menu"
            android:checkable="false"
            android:title="@string/menu_close"
            android:visible="false" />

    </group>
</menu>
