<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/scan_result_valid_personal_details_title" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <nl.rijksoverheid.ctr.verifier.ui.views.PersonalDetailItemWidget
                android:id="@+id/personal_details_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="48dp"
                app:header="@string/scan_result_valid_last_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <nl.rijksoverheid.ctr.verifier.ui.views.PersonalDetailItemWidget
                android:id="@+id/personal_details_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:header="@string/scan_result_valid_first_name"
                app:layout_constraintEnd_toEndOf="@+id/personal_details_lastname"
                app:layout_constraintStart_toStartOf="@+id/personal_details_lastname"
                app:layout_constraintTop_toBottomOf="@+id/personal_details_lastname" />

            <nl.rijksoverheid.ctr.verifier.ui.views.PersonalDetailItemWidget
                android:id="@+id/personal_details_birthdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:header="@string/scan_result_valid_birth_day"
                app:layout_constraintEnd_toStartOf="@id/personal_details_birthmonth"
                app:layout_constraintHorizontal_weight="4"
                app:layout_constraintStart_toStartOf="@+id/personal_details_lastname"
                app:layout_constraintTop_toBottomOf="@+id/personal_details_firstname" />

            <nl.rijksoverheid.ctr.verifier.ui.views.PersonalDetailItemWidget
                android:id="@+id/personal_details_birthmonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:header="@string/scan_result_valid_birth_month"
                app:layout_constraintEnd_toEndOf="@id/personal_details_lastname"
                app:layout_constraintHorizontal_weight="6"
                app:layout_constraintStart_toEndOf="@id/personal_details_birthdate"
                app:layout_constraintTop_toTopOf="@id/personal_details_birthdate" />

            <TextView
                android:id="@+id/international_description"
                android:visibility="gone"
                style="@style/App.TextAppearance.MaterialComponents.Headline.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personal_details_birthmonth" />

            <TextView
                style="@style/App.TextAppearance.MaterialComponents.Body2.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/scan_result_mandatory_id_check"
                app:layout_goneMarginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/international_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <nl.rijksoverheid.ctr.design.views.ScrollViewButtonWidget
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:attachToScrollView="@+id/scroll"
        app:buttonText="@string/scan_result_valid_id_confirmed_button"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll"
        app:secondaryButtonText="@string/scan_result_something_wrong" />

</androidx.constraintlayout.widget.ConstraintLayout>
